# platformsh-docs

./: .editorconfig  .gitignore  .gitmodules  .ignore  .platform.app.yaml  .travis.yml  .vale.ini  CONTRIBUTING.md  GLOSSARY.md  Makefile  README.md  README.rst  README_discover.md  README_drupal.md  README_drupal_migrate.md  README_enterprise.md  README_overview.md  README_symfony.md  README_user_guide.md  SUMMARY.md  SUMMARY_cli.md  SUMMARY_discover.md  SUMMARY_drupal.md  SUMMARY_drupal_migrate.md  SUMMARY_enterprise.md  SUMMARY_overview.md  SUMMARY_reference.md  SUMMARY_symfony.md  SUMMARY_user_guide.md  book.json  book_bitbucket.json  book_discover.json  book_drupal.json  book_drupal_migrate.json  book_enterprise.json  book_overview.json  book_reference.json  book_symfony.json  book_user_guide.json  broken_links.csv  (+36 more)
.github/: pull_request_template.md
.husky/: pre-commit
.platform/: applications.yaml  routes.yaml  services.yaml
_book/: glossary.html  index.html  protective-block.html  (+1 more)
search/: .gitignore  .platform.app.yaml  ABOUT.md  Pipfile  build.sh  createPrimaryIndex.py  createtemplateindex.py  deploy.sh  index_external_sites.sh  local_search.sh  main.py  post_deploy.sh  pyproject.toml  scrape.json  scrape.sh  scrapy.cfg  start.sh  update_search.sh  update_url.py
search/config/: config.json
search/docs/: items.py  middlewares.py  pipelines.py  settings.py
search/docs/spiders/: apidocsspider.py  communityspider.py  docsspider.py  websitespider.py
search/output/: .gitignore  apidocs.json  community.json  docs.json  templates.json  website.json
(+5298 files in other folders)
