[tool.poetry]
name = "search"
version = "0.1.0"
description = "Search engine half of docs.platform.sh"
authors = ["Platform.sh"]
license = "Attribution-ShareAlike 4.0 International"

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.6.1"
meilisearch = "^0.12.4"
platformshconfig = "^2.3.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
