[tool.poetry]
name = "search"
version = "0.2.0"
description = "Search engine half of docs.platform.sh"
authors = ["Platform.sh"]
license = "Attribution-ShareAlike 4.0 International"

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^43.0.1"
Scrapy = "^2.11.2"
meilisearch = "^0.24.0"
platformshconfig = "^2.3.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"
